@@ -97,7 +97,8 @@ depending on the element type.</p>
 </table></td>
 </tr><tr>
 <td><p class="pkg_label">Exceptions</p></td>
-<td><span class="code">-</span></td>
+<td><p>The elements must have assigned values<br>
+The elements must be writable</p></td>
 </tr><tr>
 <td><p class="pkg_label">See Also</p></td>
 <td><p><a href="#arrays.bubble_sort_descending">arrays.bubble_sort_descending</a><br><a href="#arrays.heap_sort">arrays.heap_sort</a><br><a href="#arrays.heap_sort_descending">arrays.heap_sort_descending</a></p>
@@ -135,7 +136,8 @@ strings or numbers depending on the element type.</p>
 </table></td>
 </tr><tr>
 <td><p class="pkg_label">Exceptions</p></td>
-<td><span class="code">-</span></td>
+<td><p>The elements must have assigned values<br>
+The elements must be writable</p></td>
 </tr><tr>
 <td><p class="pkg_label">See Also</p></td>
 <td><p><a href="#arrays.bubble_sort">arrays.bubble_sort</a><br><a href="#arrays.heap_sort">arrays.heap_sort</a><br><a href="#arrays.heap_sort_descending">arrays.heap_sort_descending</a></p>
@@ -216,7 +218,8 @@ strings or numbers depending on the element type.</p>
 </table></td>
 </tr><tr>
 <td><p class="pkg_label">Exceptions</p></td>
-<td><span class="code">-</span></td>
+<td><p>The elements must have assigned values<br>
+The elements must be writable</p></td>
 </tr><tr>
 <td><p class="pkg_label">See Also</p></td>
 <td><p><a href="#arrays.bubble_sort">arrays.bubble_sort</a><br><a href="#arrays.bubble_sort_descending">arrays.bubble_sort_descending</a><br><a href="#arrays.heap_sort_descending">arrays.heap_sort_descending</a></p>
@@ -254,7 +257,8 @@ strings or numbers depending on the element type.</p>
 </table></td>
 </tr><tr>
 <td><p class="pkg_label">Exceptions</p></td>
-<td><span class="code">-</span></td>
+<td><p>The elements must have assigned values<br>
+The elements must be writable</p></td>
 </tr><tr>
 <td><p class="pkg_label">See Also</p></td>
 <td><p><a href="#arrays.bubble_sort">arrays.bubble_sort</a><br><a href="#arrays.bubble_sort_descending">arrays.bubble_sort_descending</a><br><a href="#arrays.heap_sort">arrays.heap_sort</a></p>
@@ -380,7 +384,8 @@ reserved word "reverse".)</p>
 </table></td>
 </tr><tr>
 <td><p class="pkg_label">Exceptions</p></td>
-<td><span class="code">-</span></td>
+<td><p>The elements must have assigned values<br>
+The elements must be writable</p></td>
 </tr><tr>
 <td><p class="pkg_label">See Also</p></td>
 <td><p>-</p>
@@ -418,7 +423,8 @@ the first element to the last position.</p>
 </table></td>
 </tr><tr>
 <td><p class="pkg_label">Exceptions</p></td>
-<td><span class="code">-</span></td>
+<td><p>The elements must have assigned values<br>
+The elements must be writable</p></td>
 </tr><tr>
 <td><p class="pkg_label">See Also</p></td>
 <td><p><a href="#arrays.rotate_right">arrays.rotate_right</a><br><a href="#arrays.shift_left">arrays.shift_left</a><br><a href="#arrays.shift_right">arrays.shift_right</a></p>
@@ -456,7 +462,8 @@ the last element to the first position.</p>
 </table></td>
 </tr><tr>
 <td><p class="pkg_label">Exceptions</p></td>
-<td><span class="code">-</span></td>
+<td><p>The elements must have assigned values<br>
+The elements must be writable</p></td>
 </tr><tr>
 <td><p class="pkg_label">See Also</p></td>
 <td><p><a href="#arrays.rotate_left">arrays.rotate_left</a><br><a href="#arrays.shift_left">arrays.shift_left</a><br><a href="#arrays.shift_right">arrays.shift_right</a></p>
@@ -494,7 +501,8 @@ overwriting the first element.</p>
 </table></td>
 </tr><tr>
 <td><p class="pkg_label">Exceptions</p></td>
-<td><span class="code">-</span></td>
+<td><p>The elements must have assigned values<br>
+The elements must be writable</p></td>
 </tr><tr>
 <td><p class="pkg_label">See Also</p></td>
 <td><p><a href="#arrays.rotate_left">arrays.rotate_left</a><br><a href="#arrays.rotate_right">arrays.rotate_right</a><br><a href="#arrays.shift_right">arrays.shift_right</a></p>
@@ -532,7 +540,8 @@ overwriting the last element.</p>
 </table></td>
 </tr><tr>
 <td><p class="pkg_label">Exceptions</p></td>
-<td><span class="code">-</span></td>
+<td><p>The elements must have assigned values<br>
+The elements must be writable</p></td>
 </tr><tr>
 <td><p class="pkg_label">See Also</p></td>
 <td><p><a href="#arrays.rotate_left">arrays.rotate_left</a><br><a href="#arrays.rotate_right">arrays.rotate_right</a><br><a href="#arrays.shift_left">arrays.shift_left</a></p>
@@ -569,7 +578,8 @@ overwriting the last element.</p>
 </table></td>
 </tr><tr>
 <td><p class="pkg_label">Exceptions</p></td>
-<td><span class="code">-</span></td>
+<td><p>The elements must have assigned values<br>
+The elements must be writable</p></td>
 </tr><tr>
 <td><p class="pkg_label">See Also</p></td>
 <td><p><a href="#arrays.bubble_sort_descending">arrays.bubble_sort_descending</a><br><a href="#arrays.heap_sort">arrays.heap_sort</a><br><a href="#arrays.heap_sort_descending">arrays.heap_sort_descending</a></p>
