@@ -1,0 +1,5 @@
+i : integer;
+
+arrays.shuffle( i ); -- i is not an array
+
+
