@@ -1,0 +1,6 @@
+type list is new limited integer;
+
+a : array(1..2) of list;
+
+arrays.heap_sort( a ); -- cannot sort limiteds
+
