@@ -1,0 +1,6 @@
+type list is new limited string;
+
+a : array(1..2) of list;
+
+arrays.heap_sort_descending( a ); -- cannot sort limiteds
+
