@@ -1,0 +1,6 @@
+type list is new constant integer;
+
+a : array(1..2) of list;
+
+arrays.bubble_sort( a ); -- cannot sort constants
+
