@@ -1,0 +1,6 @@
+type list is new constant string;
+
+a : array(1..2) of list;
+
+arrays.bubble_sort_descending( a ); -- cannot sort constants
+
