@@ -1,0 +1,7 @@
+
+type li is new limited integer;
+
+a : array(1..2) of li;
+
+arrays.shuffle( a ); -- cannot move limiteds
+
